--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,4 +13,6 @@
     -->
     <dimen name="inner_frame_layout_padding">5dp</dimen>
     <dimen name="header">24dp</dimen>
+    <dimen name="NameText">20dp</dimen>
+    <dimen name="TextName">22dp</dimen>
 </resources>
