--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,51 +23,51 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView6"
+        android:id="@+id/birthday"
         android:layout_width="154dp"
         android:layout_height="121dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="7dp"
         android:layout_marginEnd="20dp"
-        app:layout_constraintEnd_toStartOf="@+id/imageView11"
+        app:layout_constraintEnd_toStartOf="@+id/event"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/MainHeader"
         app:srcCompat="@drawable/birthday" />
 
     <ImageView
-        android:id="@+id/imageView11"
+        android:id="@+id/event"
         android:layout_width="164dp"
         android:layout_height="117dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="7dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="20dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView6"
+        app:layout_constraintStart_toEndOf="@+id/birthday"
         app:layout_constraintTop_toBottomOf="@+id/MainHeader"
         app:srcCompat="@drawable/event" />
 
     <ImageView
-        android:id="@+id/imageView12"
+        android:id="@+id/anniversary"
         android:layout_width="154dp"
         android:layout_height="121dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="15dp"
         android:layout_marginEnd="20dp"
-        app:layout_constraintEnd_toStartOf="@+id/imageView13"
+        app:layout_constraintEnd_toStartOf="@+id/wedding"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView6"
+        app:layout_constraintTop_toBottomOf="@+id/birthday"
         app:srcCompat="@drawable/anniversary" />
 
     <ImageView
-        android:id="@+id/imageView13"
+        android:id="@+id/wedding"
         android:layout_width="154dp"
         android:layout_height="121dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="15dp"
         android:layout_marginEnd="16dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView12"
-        app:layout_constraintTop_toBottomOf="@+id/imageView11"
+        app:layout_constraintStart_toEndOf="@+id/anniversary"
+        app:layout_constraintTop_toBottomOf="@+id/event"
         app:srcCompat="@drawable/wedding" />
 
     <ImageView
@@ -79,7 +79,7 @@
         android:layout_marginEnd="20dp"
         app:layout_constraintEnd_toStartOf="@+id/imageView15"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView12"
+        app:layout_constraintTop_toBottomOf="@+id/anniversary"
         app:srcCompat="@drawable/party" />
 
     <ImageView
@@ -91,7 +91,7 @@
         android:layout_marginEnd="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageView14"
-        app:layout_constraintTop_toBottomOf="@+id/imageView13"
+        app:layout_constraintTop_toBottomOf="@+id/wedding"
         app:srcCompat="@drawable/other" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -156,10 +156,10 @@
         android:textColor="@color/white"
         android:textSize="22sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/imageView6"
+        app:layout_constraintEnd_toEndOf="@+id/birthday"
         app:layout_constraintHorizontal_bias="0.083"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView6" />
+        app:layout_constraintTop_toTopOf="@+id/birthday" />
 
     <TextView
         android:id="@+id/PartyTextView"
@@ -186,10 +186,10 @@
         android:textColor="@color/white"
         android:textSize="22sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/imageView12"
+        app:layout_constraintEnd_toEndOf="@+id/anniversary"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView12" />
+        app:layout_constraintTop_toTopOf="@+id/anniversary" />
 
     <TextView
         android:id="@+id/EventTextView"
@@ -203,8 +203,8 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.907"
-        app:layout_constraintStart_toStartOf="@+id/imageView11"
-        app:layout_constraintTop_toTopOf="@+id/imageView11" />
+        app:layout_constraintStart_toStartOf="@+id/event"
+        app:layout_constraintTop_toTopOf="@+id/event" />
 
     <TextView
         android:id="@+id/OtherTextView"
@@ -233,7 +233,7 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.8"
-        app:layout_constraintStart_toStartOf="@+id/imageView13"
-        app:layout_constraintTop_toTopOf="@+id/imageView13" />
+        app:layout_constraintStart_toStartOf="@+id/wedding"
+        app:layout_constraintTop_toTopOf="@+id/wedding" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
