--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="orange">#E16F30</color>
     <color name="blue">#14D368</color>
+    <color name="grey">#F1F1F1</color>
 </resources>
