--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity" >
 
-
     <TextView
         android:id="@+id/MainHeader"
         android:layout_width="wrap_content"
@@ -71,26 +70,26 @@
         app:srcCompat="@drawable/wedding" />
 
     <ImageView
-        android:id="@+id/imageView14"
+        android:id="@+id/festival"
         android:layout_width="154dp"
         android:layout_height="100dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="15dp"
         android:layout_marginEnd="20dp"
-        app:layout_constraintEnd_toStartOf="@+id/imageView15"
+        app:layout_constraintEnd_toStartOf="@+id/other"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/anniversary"
         app:srcCompat="@drawable/party" />
 
     <ImageView
-        android:id="@+id/imageView15"
+        android:id="@+id/other"
         android:layout_width="151dp"
         android:layout_height="94dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="16dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView14"
+        app:layout_constraintStart_toEndOf="@+id/festival"
         app:layout_constraintTop_toBottomOf="@+id/wedding"
         app:srcCompat="@drawable/other" />
 
@@ -103,7 +102,7 @@
         android:backgroundTint="@color/orange"
         android:clickable="true"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView15"
+        app:layout_constraintTop_toBottomOf="@+id/other"
         app:srcCompat="@drawable/exit" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -117,7 +116,7 @@
         app:layout_constraintEnd_toStartOf="@+id/BtnLogout"
         app:layout_constraintHorizontal_bias="0.293"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView14"
+        app:layout_constraintTop_toBottomOf="@+id/festival"
         app:srcCompat="@drawable/profile" />
 
     <TextView
@@ -167,14 +166,14 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="36dp"
         android:layout_marginTop="64dp"
-        android:text="Party"
+        android:text="Festival"
         android:textColor="@color/white"
         android:textSize="22sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/imageView14"
+        app:layout_constraintEnd_toEndOf="@+id/festival"
         app:layout_constraintHorizontal_bias="0.328"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView14" />
+        app:layout_constraintTop_toTopOf="@+id/festival" />
 
     <TextView
         android:id="@+id/AnniTextView"
@@ -218,8 +217,8 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.893"
-        app:layout_constraintStart_toStartOf="@+id/imageView15"
-        app:layout_constraintTop_toTopOf="@+id/imageView15" />
+        app:layout_constraintStart_toStartOf="@+id/other"
+        app:layout_constraintTop_toTopOf="@+id/other" />
 
     <TextView
         android:id="@+id/WeddingTextView"
