--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="orange">#E16F30</color>
     <color name="blue">#14D368</color>
     <color name="grey">#F1F1F1</color>
+    <color name="Price">#4D66EF</color>
 </resources>
