--- a/app/src/main/res/layout/activity_festival_main.xml
+++ b/app/src/main/res/layout/activity_festival_main.xml
@@ -154,7 +154,7 @@
         android:layout_marginStart="65dp"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="134dp"
-        android:text="$49.99"
+        android:text="49.99"
         android:textColor="@color/Price"
         app:layout_constraintEnd_toStartOf="@+id/price26"
         app:layout_constraintStart_toStartOf="parent"
@@ -167,7 +167,7 @@
         android:layout_marginStart="65dp"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="135dp"
-        android:text="$24.99"
+        android:text="24.99"
         android:textColor="@color/Price"
         app:layout_constraintEnd_toStartOf="@+id/price3"
         app:layout_constraintStart_toStartOf="parent"
@@ -179,7 +179,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="73dp"
-        android:text="$19.99"
+        android:text="19.99"
         android:textColor="@color/Price"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView24" />
@@ -190,7 +190,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="72dp"
-        android:text="$39.99"
+        android:text="39.99"
         android:textColor="@color/Price"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView26" />
