--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -92,7 +92,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        android:layout_marginEnd="65dp"
+        android:layout_marginEnd="36dp"
         android:backgroundTint="@color/orange"
         android:clickable="true"
         app:layout_constraintEnd_toEndOf="parent"
@@ -103,35 +103,57 @@
         android:id="@+id/BtnProfile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="70dp"
-        android:layout_marginTop="17dp"
-        android:layout_marginEnd="113dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="15dp"
         android:backgroundTint="@color/orange"
         android:clickable="true"
-        app:layout_constraintEnd_toStartOf="@+id/BtnLogout"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/birthday"
         app:srcCompat="@drawable/profile" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/cartBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:backgroundTint="@color/orange"
+        android:clickable="true"
+        android:src="@drawable/cart"
+        app:layout_constraintEnd_toStartOf="@+id/BtnLogout"
+        app:layout_constraintStart_toEndOf="@+id/BtnProfile"
+        app:layout_constraintTop_toBottomOf="@+id/other" />
 
     <TextView
         android:id="@+id/ProfBtnTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="68dp"
+        android:layout_marginStart="34dp"
         android:text="Profile"
         android:textColor="@color/blue"
         android:textSize="20dp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@+id/LogoutBtnTextView"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/BtnProfile" />
+
+    <TextView
+        android:id="@+id/profBtnTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="67dp"
+        android:layout_marginEnd="64dp"
+        android:text="Cart"
+        android:textColor="@color/blue"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@+id/LogoutBtnTextView"
+        app:layout_constraintStart_toEndOf="@+id/ProfBtnTextView"
+        app:layout_constraintTop_toBottomOf="@+id/cartBtn" />
 
     <TextView
         android:id="@+id/LogoutBtnTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="62dp"
+        android:layout_marginEnd="34dp"
         android:text="Logout"
         android:textColor="@color/blue"
         android:textSize="20dp"
