--- a/app/src/main/res/layout/profile_add.xml
+++ b/app/src/main/res/layout/profile_add.xml
@@ -5,7 +5,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:background="@color/grey"
+    android:layout_marginTop="20dp"
     >
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
